quickstart added to README